terraform/hashicorp-vault/resources/gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault
  namespace: vault
spec:
  hosts:
    - team-divider.vault
  gateways:
    - istio-system/team-divider-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vault.vault.svc.cluster.local
            subset: vault-ui
            port:
              number: 8200
